--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,87 @@
 /* app.css */
+.hero-section {
+    position: relative;
+    height: 80vh;
+}
+
+.hero-image {
+    background-image: url('https://jumpseller.com/images/learn/create-a-blog/blog.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+}
+
+.hero-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding-bottom: 50px;
+}
+
+.hero-text {
+    text-align: center;
+    color: white;
+    margin-bottom: 30px;
+}
+
+.hero-text h2 {
+    font-size: 28px;
+    margin-bottom: 10px;
+}
+
+.hero-text h3 {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.btn {
+    background-color: #6100ff;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+
+
+.btn:hover {
+    background: #260064;
+    color: white;
+}
+
+.btn-block {
+    width: 100%;
+}
+
+/* Additional styling for the other content */
+h1 {
+    margin-top: 50px;
+}
+
+.btn-blue {
+    display: flex;
+    align-items: center;
+    background-color: #d6bcff;
+    color: white;
+    padding: 20px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.btn-blue svg {
+    margin-right: 10px;
+}
+
+
+
+
 
 body {
     margin: 0px;
@@ -16,7 +99,7 @@ body {
   }
   
   .page {
-    padding-top: 60px; /* change this value to match your navbar height */
+    padding-top: 25px; /* change this value to match your navbar height */
   }
   
   /* Navigation Menu */
@@ -141,18 +224,7 @@ footer .col-md-12 p {
     transition: all 0.3s ease;
 }
 
-.btn-primary {
-    background: #6100ff;
-    color: #fff;
-}
 
-.btn-primary:hover {
-    background: #260064;
-}
-
-.btn-block {
-    width: 100%;
-}
 
 .login-page {
     min-height: 100vh;
