--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,10 @@
 /* app.css */
 .hero-section {
     position: relative;
-    height: 80vh;
+    height: 100vh;
+    width: 100%;
+    
+  
 }
 
 .hero-image {
@@ -33,15 +36,15 @@
 
 .hero-text h2 {
     font-size: 28px;
-    margin-bottom: 10px;
+    margin-bottom: 40px;
 }
 
 .hero-text h3 {
     font-size: 18px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
-.btn {
+.btnn {
     background-color: #6100ff;
     color: white;
     padding: 10px 20px;
@@ -51,12 +54,12 @@
 
 
 
-.btn:hover {
+.btnn:hover {
     background: #260064;
     color: white;
 }
 
-.btn-block {
+.btnn-block {
     width: 100%;
 }
 
@@ -65,7 +68,7 @@ h1 {
     margin-top: 50px;
 }
 
-.btn-blue {
+.btnn-blue {
     display: flex;
     align-items: center;
     background-color: #d6bcff;
@@ -75,7 +78,7 @@ h1 {
     text-decoration: none;
 }
 
-.btn-blue svg {
+.btnn-blue svg {
     margin-right: 10px;
 }
 
@@ -99,74 +102,12 @@ body {
   }
   
   .page {
-    padding-top: 25px; /* change this value to match your navbar height */
+    padding-top: 5px; /* change this value to match your navbar height */
+    overflow: hidden;
+        position: relative;
   }
   
-  /* Navigation Menu */
-.navbar-nav .dropdown-menu li a:hover {
-    color: #fff;
-    background-color: #6100ff;
-}
-.nav .open>a {
-    background-color: #6100ff;
-    color: #fff;
-}
-.nav .open>a:hover {
-    background-color: #2e6da4;
-    color: #fff;
-}
-.nav .open>a:focus {
-    background-color: #6100ff;
-    color: #fff;
-}
-.nav .open .dropdown-menu {
-    background-color: #fff;
-    border-color: #6100ff;
-}
-.nav .open .dropdown-menu li a {
-    color: #333;
-}
-.nav .open .dropdown-menu li a:hover {
-    color: #fff;
-    background-color: #6100ff;
-}
-.nav .open .dropdown-menu li a:focus {
-    color: #333;
-    background-color: #f5f5f5;
-}
-.navbar-nav .login-link:hover, .navbar-nav .register-link:hover {
-    color: #fff;
-    background-color: #6100ff;
-}
-.navbar {
-    background-color:#e0dfdf;
-    border: none;
-    border-radius: 0;
-    box-shadow: 0 4px 10px rgba(62, 27, 158, 0.2);
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    -o-border-radius: 0;
-}
 
-  
-  .navbar-nav > .nav-item > form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 8px;
-    margin-bottom: 8px;
-}
-
-.navbar-nav > .nav-item > form > input {
-    width: 250px;
-    border-radius: 20px;
-}
-
-.navbar-nav > .nav-item > form > button {
-    border-radius: 20px;
-    margin-left: 8px;
-}
 
 /* footer */
 
@@ -216,7 +157,7 @@ footer .col-md-12 p {
     font-family: sans-serif;
 }
 
-.btn {
+.btnn {
     padding: 10px 35px;
     border-radius: 300px;
     border: none;
@@ -280,4 +221,93 @@ footer .col-md-12 p {
 .register-link a {
     color: #007bff;
 }
+
+.blog-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  
+  .blog-box {
+    flex-basis: calc(32.33% - 10px);
+    width: 100%;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .blog-image {
+    text-align: center;
+  }
+  
+  .blog-image img {
+    width: 200px;
+    height: 200px;
+    border-radius: 5px;
+    object-fit: cover;
+    margin-bottom: 10px;
+  }
+  
+  .blog-title {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .blog-meta {
+    margin-bottom: 10px;
+  }
+  
+  .blog-category {
+    background-color: #ccc;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 3px;
+    margin-right: 5px;
+  }
+  
+  .blog-author {
+    color: #888;
+  }
+  
+  .blog-description {
+    color: #555;
+    line-height: 1.4;
+  }
+  
+
+  .pagination-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination {
+    display: flex;
+    list-style: none;
+    justify-content: center;
+}
+
+.pagination li {
+    margin: 0 3px;
+}
+
+.pagination li a,
+.pagination li span {
+    display: block;
+    padding: 10px 0px;
+    font-size: 18px;
+    text-decoration: none;
+    color: #333;
+}
+
+.pagination li.disabled span {
+    color: #999;
+    pointer-events: none;
+}
+.pagination li a.arrow {
+  font-size: 34px;
+  line-height: 24px;
+}
+
 
