--- a/resources/css/user.css
+++ b/resources/css/user.css
@@ -1,19 +1,21 @@
+
 .sidebar {
-    background-color: #e0dfdf;
+    background-color: #ffffff;
     border-radius: 10px;
     color: #000;
     width: 200px;
     padding: 20px;
     position: fixed;
-    top: 50px;
+    top: 0px;
     bottom: 0;
     left: 0;
-    box-shadow: 0 50px 50px rgba(62, 27, 158, 0.2);
+    box-shadow: 0 5px 5px rgba(62, 27, 158, 0.2);
 }
 
 .sidebar .user-profile {
     text-align: center;
-    margin-bottom: 20px;
+    margin-top: 100px;
+    margin-bottom: 50px;
 }
 
 .sidebar .user-profile img {
@@ -52,7 +54,7 @@
 .home {
     background-color: #f9f9f9;
     padding: 20px 0;
-    margin-left: 20%
+    margin-left: 17%
 }
 
 .text {
@@ -97,4 +99,28 @@
 .form-group.text-end {
     margin-top: 30px;
 }
+.btnn {
+    padding: 10px 35px;
+    border-radius: 300px;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.btnn {
+    background-color: #6100ff;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+}
 
+
+
+.btnn:hover {
+    background: #260064;
+    color: white;
+}
+
+.btnn-block {
+    width: 100%;
+}
