--- a/resources/css/graph.css
+++ b/resources/css/graph.css
@@ -1,19 +1,49 @@
-.graphs-container {
-    display: flex;
-  }
-  
-  .sidebar {
-    width: 200px; /* Adjust the width as needed */
-    background-color: #f0f0f0; /* Sidebar background color */
-    padding: 20px;
-  }
-  
-  .graph-container {
-    width: 400px; /* Adjust the width as needed */
-    margin-right: 20px;
-    background-color: #ffffff; /* Graph background color */
-    padding: 20px;
+/* Adjust the chart container size */
+#myChart {
+  width: 520px;
+  height: 400px;
+  margin: 0px; /* Add margin to the chart container */
+  position: fixed; /* Position the chart container */
+  bottom: 0; /* Align the chart container to the bottom */
+  left: 120px; /* Align the chart container to the right */
+}
+
+
+#categoryChart {
+  width: 500px;
+  height: 400px;
+  margin: 0px; /* Add margin to the chart container */
+  position: fixed; /* Position the chart container */
+  bottom: 0; /* Align the chart container to the bottom */
+  right: 80px; /* Align the chart container to the right */
+}
+.card {
+  left: 125px;
+    background-color: #ffffff;
+    border: 1px solid #e0e0e0;
     border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.card h4 {
+    font-size: 24px;
+    font-weight: 600;
+    color: #6100ff;
+    margin-bottom: 5px;
+}
+
+.card h6 {
+    font-size: 14px;
+    font-weight: 400;
+    color: #999999;
+    margin-bottom: 0;
+}
+
+.card i {
+    font-size: 28px;
+    color: #555555;
+}
+
